# sc

./: .gitignore
src/: setup.py
src/c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  includes.h  party.h  test.c
src/c/circuits/: int_circuits.c  int_circuits.h
src/c/gc/: gc.h
src/c/gc/halfgate/: gc.c
src/c/test/: test.c  test_add.c  test_and.c  test_bit.c  test_bits.c  test_network.c  test_networkc.c  test_networks.c  test_sc_and.c  test_simd.c  test_xor.c
src/c/utils/: converter.c  converter.h  error.c  error.h  net.c  net.h  simd.c  simd.h
src/c/validator/: test.c  validator.c  validator.h
src/sc/: circuit.py
src/validator/: main.c
